ajuste para melhorar acessibilidade da pagina

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
         <title>Giovanni Oyano - Especialista em Investimentos</title>
@@ -34,7 +34,9 @@
     <body>
         <div class="bg-gray">
             <div class="logo-partner animate-fade-in">
-                <img src="./dist/images/logo-portfel.webp" width="613" height="77" alt="Portfel">
+                <img src="./dist/images/logo-portfel-613w.webp" 
+                    srcset="./dist/images/logo-portfel-300w.webp 300w, ./dist/images/logo-portfel-613w.webp 613w" 
+                    sizes="(max-width: 300px) 300px, 613px" width="613" height="77" alt="Portfel">
             </div>
         </div>
 
@@ -97,42 +99,42 @@
                         <h2>Consultoria de investimentos</h2>
                         <p>Monto carteiras de investimentos personalizadas, alinhadas com cada perfil de risco e objetivos financeiros. Maximize retornos e minimize riscos com uma estratégia diversificada e eficiente, focada no crescimento sustentável do seu patrimônio.</p>
                         <div>
-                            <img src="./dist/images/svg/service-icon-1.svg" alt="Icone do serviço 1" />
+                            <img src="./dist/images/svg/service-icon-1.svg" alt="Icone do serviço 1" width="34" height="30" />
                         </div>
                     </li>
                     <li class="services-item animate-fade-in-left">
                         <h2>Planejamento financeiro</h2>
                         <p>Auxilio no controle de suas finanças, estabelecendo metas claras e estratégias eficazes. Com um planejamento financeiro sólido, garantindo a segurança, controle do orçamento e a realização de seus projetos de curto, médio e longo prazo.</p>
                         <div>
-                            <img src="./dist/images/svg/service-icon-2.svg" alt="Icone do serviço 2" />
+                            <img src="./dist/images/svg/service-icon-2.svg" alt="Icone do serviço 2" width="41" height="30" />
                         </div>
                     </li>
                     <li class="services-item animate-fade-in-left">
                         <h2>Planejamento sucessório</h2>
                         <p>Faço orientação sobre qual a melhor forma de organizar a sucessão de bens, garantindo a preservação e continuidade do patrimônio familiar. Evite conflitos e minimize a carga tributária com um planejamento sucessório eficiente e estratégico.</p>
                         <div>
-                            <img src="./dist/images/svg/service-icon-3.svg" alt="Icone do serviço 3" />
+                            <img src="./dist/images/svg/service-icon-3.svg" alt="Icone do serviço 3" width="35" height="30" />
                         </div>
                     </li>
                     <li class="services-item animate-fade-in-right">
                         <h2>Holding</h2>
                         <p>Estruturo e gerencio a criação de holdings para oferecer proteção patrimonial e vantagens fiscais. Com segurança jurídica e redução de impostos, ajudo na gestão eficiente dos ativos da sua empresa ou família.</p>
                         <div>
-                            <img src="./dist/images/svg/service-icon-4.svg" alt="Icone do serviço 4" />
+                            <img src="./dist/images/svg/service-icon-4.svg" alt="Icone do serviço 4" width="29" height="30" />
                         </div>
                     </li>
                     <li class="services-item animate-fade-in-right">
                         <h2>Off-shore</h2>
                         <p>Auxilio na criação de empresas off-shore, permitindo a diversificação de ativos e a otimização tributária internacional. Esse serviço oferece proteção patrimonial e oportunidades de investimento em mercados globais de forma legal e segura.</p>
                         <div>
-                            <img src="./dist/images/svg/service-icon-5.svg" alt="Icone do serviço 5" />
+                            <img src="./dist/images/svg/service-icon-5.svg" alt="Icone do serviço 5" width="30" height="30" />
                         </div>
                     </li>
                     <li class="services-item animate-fade-in-right">
                         <h2>Seguro de vida</h2>
                         <p>Protejo seu futuro e o de sua família com consultoria para escolher seguros de vida adequados. Garanto segurança financeira em casos de imprevistos, trazendo tranquilidade para seus entes queridos.</p>
                         <div>
-                            <img src="./dist/images/svg/service-icon-6.svg" alt="Icone do serviço 6" />
+                            <img src="./dist/images/svg/service-icon-6.svg" alt="Icone do serviço 6" width="28" height="30" />
                         </div>
                     </li>
                 </ul>
@@ -165,7 +167,10 @@
                     </div>
 
                     <div class="differential-image animate-fade-in-up">
-                        <img src="./dist/images/mapa.webp" width="1280" height="720" alt="Modelo FEE Based">
+                        <img src="./dist/images/mapa-1280w.webp" 
+                            srcset="./dist/images/mapa-400w.webp 400w, ./dist/images/mapa-600w.webp 600w, ./dist/images/mapa-1280w.webp 1280w" 
+                            sizes="(max-width: 400px) 400px, (max-width: 600px) 600px, 1280px" 
+                            width="1280" height="720" alt="Modelo FEE Based">
                     </div>
 
                     <div class="differential-info animate-fade-in-right">
@@ -182,9 +187,9 @@
 
                 <div class="how-it-work-content">
                     <div class="how-it-work-info animate-fade-in-left">
-                        <span>01.</span>
+                        <span aria-hidden="true">01.</span>
                         <div class="how-it-work-card">
-                            <h4>Primeira etapa</h4>
+                            <span>Primeira etapa</span>
                             <h3>Definição do perfil de investidor</h3>
                             <p>Nesse primeiro momento vou te apresentar a nossa estrutura e conversar sobre o seu perfil de investidor. Com isso, montarei carteiras adequadas ao seu objetivo e ao seu perfil.</p>
                         </div>
@@ -195,9 +200,9 @@
                     </div>
 
                     <div class="how-it-work-info animate-fade-in-right">
-                        <span>02.</span>
+                        <span aria-hidden="true">02.</span>
                         <div class="how-it-work-card">
-                            <h4>Segunda etapa</h4>
+                            <span>Segunda etapa</span>
                             <h3>Suitability & contrato</h3>
                             <p>Com base na avaliação de perfil e análise de patrimônio, estruturo uma carteira de investimentos personalizada, alinhada com seus objetivos financeiros e tolerância ao risco.</p>
                         </div>
@@ -208,9 +213,9 @@
                     </div>
 
                     <div class="how-it-work-info animate-fade-in-left">
-                        <span>03.</span>
+                        <span aria-hidden="true">03.</span>
                         <div class="how-it-work-card">
-                            <h4>Terceira etapa</h4>
+                            <span>Terceira etapa</span>
                             <h3>Acompanhamento do seu plano de investimentos</h3>
                             <p>Por último, faremos uma segunda reunião, em que apresentarei para você um planejamento financeiro detalhado dos próximos passos, junto com uma carteira de  investimentos que eu vou preparar  unicamente para você. E, a partir disso, vou acompanhar os seus investimentos e rebalancear a sua carteira sempre que necessário.</p>
                         </div>
