--- a/index.html
+++ b/index.html
@@ -78,7 +78,11 @@
         <main id="introduction" aria-label="Introdução" class="bg-dark">
             <div class="container-main">
                 <div class="introduction-image animate-fade-in">
-                    <img src="./dist/images/introduction.webp" width="620" height="650" alt="Giovanni Oyano">
+                    <img src="./dist/images/introduction-620w.webp" 
+                        srcset="./dist/images/introduction-400w.webp 400w, ./dist/images/introduction-620w.webp 620w" 
+                        sizes="(max-width: 300px) 300px, 620px" width="620" height="650" alt="Giovanni Oyano">
+
+                    <img src="./dist/images/introduction.webp" >
                 </div>
                 <div class="introduction-content animate-fade-in-up">
                     <h1>Conquiste sua liberdade financeira com um profissional independente.</h1>
@@ -167,9 +171,9 @@
                     </div>
 
                     <div class="differential-image animate-fade-in-up">
-                        <img src="./dist/images/mapa-1280w.webp" 
-                            srcset="./dist/images/mapa-400w.webp 400w, ./dist/images/mapa-600w.webp 600w, ./dist/images/mapa-1280w.webp 1280w" 
-                            sizes="(max-width: 400px) 400px, (max-width: 600px) 600px, 1280px" 
+                        <img src="./dist/images/mapa-600w.webp" 
+                            srcset="./dist/images/mapa-400w.webp 400w, ./dist/images/mapa-600w.webp 600w" 
+                            sizes="(max-width: 400px) 400px, 600px" 
                             width="1280" height="720" alt="Modelo FEE Based">
                     </div>
 
