--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
         <meta name="description" content="Conquiste sua liberdade financeira com consultoria independente. Personalizo estratégias de investimentos, planejamento financeiro e sucessório, holdings e off-shore, garantindo crescimento patrimonial seguro, sem conflito de interesse. Modelo de remuneração FEE BASED, transparente e focado em seus objetivos.">
         <meta name="keywords" content="consultoria financeira, investimentos, planejamento financeiro, planejamento sucessório, holdings, off-shore, seguro de vida, FEE BASED, consultor independente, crescimento patrimonial, segurança patrimonial, Giovanni Oyano, sem conflito de interesse, diversificação de ativos, otimização tributária">
 
-        <link rel="canonical" href="https://www.planejandofortuna.com.br/"/>
+        <link rel="canonical" href="https://www.giovannioyano.com.br/"/>
         <meta property="og:title" content="Giovanni Oyano - Especialista em Investimentos"/>
         <meta property="og:description" content="Multiplique seu patrimônio com segurança e sem conflito de interesse. Consultoria independente em investimentos, planejamento financeiro e sucessório, criação de holdings e empresas off-shore. Estratégias personalizadas para proteger e aumentar seu patrimônio. Modelo FEE BASED, transparente e focado em você.">
         <meta property="og:type" content="website"/>
-        <meta property="og:url" content="https://www.planejandofortuna.com.br/"/>
+        <meta property="og:url" content="https://www.giovannioyano.com.br/"/>
         <meta property="og:site_name" content="Giovanni Oyano - Especialista em Investimentos"/>
         <meta property="og:locale" content="pt_BR"/>
-        <meta property="og:image" content="https://www.planejandofortuna.com.br/dist/images/og-image.jpg"/>
+        <meta property="og:image" content="https://www.giovannioyano.com.br/dist/images/og-image.jpg"/>
         <meta property="og:image:type" content="image/jpeg"/>
         <meta property="og:image:width" content="1200"/>
         <meta property="og:image:height" content="630"/>
