ajuste para leitor de tela no botao close do menu mobile e tambem adicionado robots e sitemap

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="robots" content="index, follow"/>
 
         <meta name="description" content="Conquiste sua liberdade financeira com consultoria independente. Personalizo estratégias de investimentos, planejamento financeiro e sucessório, holdings e off-shore, garantindo crescimento patrimonial seguro, sem conflito de interesse. Modelo de remuneração FEE BASED, transparente e focado em seus objetivos.">
-        <meta name="keywords" content="consultoria financeira, investimentos, planejamento financeiro, planejamento sucessório, holdings, off-shore, seguro de vida, FEE BASED, consultor independente, crescimento patrimonial, segurança patrimonial, Giovanni Oyano, sem conflito de interesse, diversificação de ativos, otimização tributária">
+        <meta name="keywords" content="especialista em investimentos, consultoria financeira, investimentos, planejamento financeiro, planejamento sucessório, holdings, off-shore, seguro de vida, FEE BASED, consultor independente, crescimento patrimonial, segurança patrimonial, Giovanni Oyano, sem conflito de interesse, diversificação de ativos, otimização tributária">
 
         <link rel="canonical" href="https://www.giovannioyano.com.br/"/>
         <meta property="og:title" content="Giovanni Oyano - Especialista em Investimentos"/>
@@ -23,6 +23,7 @@
         <meta property="og:image:type" content="image/jpeg"/>
         <meta property="og:image:width" content="1200"/>
         <meta property="og:image:height" content="630"/>
+        <meta name="theme-color" content="#000000">
         
         <link rel="icon" href="./favicon.svg" type="svg+xml">
 
@@ -67,7 +68,7 @@
                             <li><a class="menu-link-mobile" href="#partners-institutions">Instituições Parceiras</a></li>
                             <li><a class="menu-link-mobile" href="#about-me">Sobre mim</a></li>
                             <li class="menu-mobile-close">
-                                <button class="btn-close"></button>
+                                <button class="btn-close" aria-label="Fechar Menu Mobile"></button>
                             </li>
                         </ul>
                     </div>
@@ -322,6 +323,23 @@
                 </a>
             </div>
         </footer>
+
+        <script type="application/ld+json">
+            {
+              "@context": "https://schema.org",
+              "@type": "Person",
+              "name": "Giovanni Oyano",
+              "jobTitle": "Especialista em Investimentos",
+              "url": "https://www.giovannioyano.com.br",
+              "sameAs": [
+                "https://www.linkedin.com/in/giovanni-oyano-cea-pqo-121399144",
+              ],
+              "worksFor": {
+                "@type": "Organization",
+                "name": "Giovanni Oyano Consultoria"
+              }
+            }
+        </script>
 
         <script src="./dist/js/main.min.js" defer></script>
     </body>
